changes for optimization structure

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "firebase/php-jwt": "^6.10",
         "phpoffice/phpspreadsheet": "^1.29",
-        "mpdf/mpdf": "^8.2"
+        "mpdf/mpdf": "^8.2",
+        "monolog/monolog": "^2.9"
     }
 }
